--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,5 +3,5 @@ body {
   font-family: "Raleway", serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #0a192f !important;
+  background-color: rgba(10, 25, 47, 0.99) !important;
 }
