--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -96,7 +96,7 @@
     z-index: 1000;
     box-shadow: inset 0 1px 1px rgba(255, 255, 255, 0.2), 0 8px 32px 0 rgba(0, 0, 0, 0.37);
     overflow: hidden;
-    transition: transform 0.3s ease-in-out;
+    transition: transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.15);
   }
 
   .bottom-nav-container.bottom-nav-hidden {
