--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -88,7 +88,7 @@
     right: 15px;
     width: auto;
     height: calc(75px + env(safe-area-inset-bottom));
-    background-color: rgba(26, 31, 46, 0.7);
+    background-color: rgba(26, 31, 46, 0.5);
     backdrop-filter: blur(18px) saturate(180%);
     -webkit-backdrop-filter: blur(18px) saturate(180%);
     border-radius: 40px;
@@ -133,11 +133,11 @@
   }
 
   .bottom-nav .nav-link:hover {
-    transform: scale(1.1);
+    color: var(--navbar-color-brand-hover) !important;
   }
 
   .bottom-nav .nav-link:active {
-    transform: scale(0.9);
+
   }
 
   .bottom-nav .nav-link.active {
