--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -84,9 +84,10 @@
   .bottom-nav-container {
     position: fixed;
     bottom: 15px;
-    left: 15px;
-    right: 15px;
-    width: auto;
+    left: 50%;
+    transform: translateX(-50%) translateY(0);
+    width: calc(100% - 30px);
+    max-width: 500px;
     height: 75px;
     background-color: rgba(26, 31, 46, 0.5);
     backdrop-filter: blur(18px) saturate(180%);
@@ -100,7 +101,7 @@
   }
 
   .bottom-nav-container.bottom-nav-hidden {
-    transform: translateY(calc(100% + 20px));
+    transform: translateX(-50%) translateY(calc(100% + 20px));
   }
 
   .bottom-nav {
